add new interfaces for flights and events
